monitoring/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      #securityContext:
        #fsGroup: 2002
        #runAsGroup: 2002
        #runAsNonRoot: true
        #runAsUser: 1001
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.21.0-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 300Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 3001
          livenessProbe:
            exec:
              command:
                - node
                - extra/healthcheck.js
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 30
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-config
          readinessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
      volumes:
        - name: uptime-kuma-config
          persistentVolumeClaim:
            claimName: uptime-kuma-config-pvc
