monitoring/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
spec:
  type: ClusterIP
  ports:  
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: uptime-kuma
